syntax = "proto3";
package chameleon;

option go_package = "github.com/awwyushh/chameleon/agentd/proto;proto";

message ClassifyRequest {
  string src_ip = 1;
  string path = 2;
  string method = 3;
  string body = 4;
  map<string, string> headers = 5; // Added headers for completeness
}

message DecisionResponse {
  enum Action {
    PASS = 0;
    DECEIVE = 1;
    TARPIT = 2; // Explicit action for just delay
  }
  Action action = 1;
  string message = 2;       // The deception body (HTML/JSON)
  int32 delay_ms = 3;       // Tarpit delay
  string label = 4;         // ML/Rule label (e.g., "sqli")
  double confidence = 5;    // 0.0 - 1.0
  
  // Honeypot details
  string honeypot_host = 6; 
  int32 honeypot_port = 7;
}

service Chameleon {
  rpc Classify(ClassifyRequest) returns (DecisionResponse);
}